Fikset tilbake til prgramfag knapp

--- a/programfag/informasjonsteknologi/index.html
+++ b/programfag/informasjonsteknologi/index.html
@@ -15,7 +15,7 @@
         <div id="forside-bilde">
             <h1>Informasjonsteknologi</h1>
             <!-- knapp tilbake til realfagssiden -->
-            <a href="/" id="tilbake-knapp">&lt; Tilbake til programfag</a>
+            <a href="/realfag/" id="tilbake-knapp">&lt; Tilbake til realfag</a>
         </div>
     </header>
     <main>
@@ -98,7 +98,7 @@
                 </div>
                 <!-- legg til interaktivt element her -->
                 <div class="divider-element">
-                    
+
                 </div>
                 <div class="interaktivt-element">
                     <iframe src="/widgets/rediger_css_spill/" width="370" height="420" style="border: none;"></iframe>
@@ -146,7 +146,7 @@
                         TODO
                     </p>
                     <p>
-                        TODO 
+                        TODO
                     </p>
                     <p>
                         TODO
@@ -172,7 +172,7 @@
                     <li><a href="https://www.udir.no/lk20/inf01-02/kompetansemaal-og-vurdering/kv472" target="_blank">Læreplan</a></li>
                 </div>
                 <div class="divider-element">
-                    
+
                 </div>
                 <div class="interaktivt-element">
                     Det andre kule området med fete GAMES for ekte GAMERS. Og mye br for å gjøre dette elemntet større. <br><b<br>r><br><br><br><br><br><br><br><br><br><br><br><br><br><br> Br go brrrrr <br><br>
