--- a/programfag/r_matte/index.html
+++ b/programfag/r_matte/index.html
@@ -15,15 +15,15 @@
         <div id="forside-bilde">
             <h1>Matematikk-R</h1>
             <!-- knapp tilbake til realfagssiden -->
-            <a href="/" id="tilbake-knapp">&lt; Tilbake til programfag</a>
+            <a href="/realfag/" id="tilbake-knapp">&lt; Tilbake til realfag</a>
         </div>
     </header>
     <main>
         <!-- kort informerende tekst om programfaget -->
         <div id="intro-tekst">
             <p>
-                Matematikk R handler om å forstå moderne anvendelser av matematikk i realfaglige 
-                og samfunnsfaglige sammenhenger. Faget gir elevene mulighet til å utvikle et presist 
+                Matematikk R handler om å forstå moderne anvendelser av matematikk i realfaglige
+                og samfunnsfaglige sammenhenger. Faget gir elevene mulighet til å utvikle et presist
                 språk for kritisk tenkning, evne til problemløsing og matematisk forståelse.
             </p>
         </div>
@@ -84,10 +84,10 @@
                 <div class="hvordan-jobber-vi">
                     <h3>Hvordan jobber vi?</h3>
                     <p>
-                        Programfaget matematikk for realfag gir fordypning i matematikk for videre studier og arbeid innen naturvitenskap, medisin, teknologi, datafag, økonomi og utdanningssektoren. 
+                        Programfaget matematikk for realfag gir fordypning i matematikk for videre studier og arbeid innen naturvitenskap, medisin, teknologi, datafag, økonomi og utdanningssektoren.
                     </p>
                     <p>
-                        Gjennom trening av regneferdigheter, både med og uten digitale hjelpemidler, utvikles et grunnlag og en nødvendig kompetanse for videre arbeid med matematikk. 
+                        Gjennom trening av regneferdigheter, både med og uten digitale hjelpemidler, utvikles et grunnlag og en nødvendig kompetanse for videre arbeid med matematikk.
                     </p>
                     <p>
                         Arbeid med programfaget skal gi en innføring i logisk og analytisk tankegang med vekt på matematisk argumentasjon og framstillingsform, samtidig som elevene gjennom anvendelse får trening i sentrale metoder.
@@ -103,8 +103,8 @@
                     <p>
                         <i>
                             «Jeg hadde hørt fra venner at R1-matte var skikkelig utfordrende og interessant.
-                            Det har vist seg å stemme. Det er faktisk enda mer interessant enn jeg trodde på 
-                            forhånd, og er nok det faget jeg bruker mest tid på. Jeg har tenkt å bli 
+                            Det har vist seg å stemme. Det er faktisk enda mer interessant enn jeg trodde på
+                            forhånd, og er nok det faget jeg bruker mest tid på. Jeg har tenkt å bli
                             sivilingeniør, og da trenger jeg både matte R1 og matte R2.»
                         </i>
                     </p>
@@ -119,7 +119,7 @@
                 </div>
                 <!-- legg til interaktivt element her -->
                 <div class="divider-element">
-                    
+
                 </div>
                 <div class="interaktivt-element">
                     <iframe src="/widgets/vektor_spill/index.html" width="510" height="470" style="border: none;"></iframe>
@@ -173,10 +173,10 @@
                 <div class="hvordan-jobber-vi">
                     <h3>Hvordan jobber vi?</h3>
                     <p>
-                        Programfaget matematikk for realfag gir fordypning i matematikk for videre studier og arbeid innen naturvitenskap, medisin, teknologi, datafag, økonomi og utdanningssektoren. 
+                        Programfaget matematikk for realfag gir fordypning i matematikk for videre studier og arbeid innen naturvitenskap, medisin, teknologi, datafag, økonomi og utdanningssektoren.
                     </p>
                     <p>
-                        Gjennom trening av regneferdigheter, både med og uten digitale hjelpemidler, utvikles et grunnlag og en nødvendig kompetanse for videre arbeid med matematikk. 
+                        Gjennom trening av regneferdigheter, både med og uten digitale hjelpemidler, utvikles et grunnlag og en nødvendig kompetanse for videre arbeid med matematikk.
                     </p>
                     <p>
                         Arbeid med programfaget skal gi en innføring i logisk og analytisk tankegang med vekt på matematisk argumentasjon og framstillingsform, samtidig som elevene gjennom anvendelse får trening i sentrale metoder.
@@ -190,9 +190,9 @@
                     <h3>Hva mener elevene?</h3>
                     <p>
                         <i>
-                            «S2 er det beste faget. Du lærer statistiske metoder for forskning og dataanalyse, 
-                            som du ikke lærer i R2. Dessuten lærer du mye matematisk grunnteori som kommer til 
-                            å hjelpe deg (og meg) med å forstå økonomi, forskningsmetodikk og henger samtidig 
+                            «S2 er det beste faget. Du lærer statistiske metoder for forskning og dataanalyse,
+                            som du ikke lærer i R2. Dessuten lærer du mye matematisk grunnteori som kommer til
+                            å hjelpe deg (og meg) med å forstå økonomi, forskningsmetodikk og henger samtidig
                             med på realfagsmatematikken»
                         </i>
                     </p>
@@ -206,7 +206,7 @@
                     <li><a href="https://www.udir.no/lk20/mat03-02" target="_blank">Læreplan</a></li>
                 </div>
                 <div class="divider-element">
-                    
+
                 </div>
                 <div class="interaktivt-element">
                     Det andre kule området med fete GAMES for ekte GAMERS. Og mye br for å gjøre dette elemntet større. <br><b<br>r><br><br><br><br><br><br><br><br><br><br><br><br><br><br> Br go brrrrr <br><br>
