--- a/programfag/s_matte/index.html
+++ b/programfag/s_matte/index.html
@@ -15,16 +15,16 @@
         <div id="forside-bilde">
             <h1>Matematikk-S</h1>
             <!-- knapp tilbake til realfagssiden -->
-            <a href="/" id="tilbake-knapp">&lt; Tilbake til programfag</a>
+            <a href="/realfag/" id="tilbake-knapp">&lt; Tilbake til realfag</a>
         </div>
     </header>
     <main>
         <!-- kort informerende tekst om programfaget -->
         <div id="intro-tekst">
             <p>
-                Matematikk S er et fag som tar sikte på å gi elevene en inngående forståelse av 
-                moderne anvendelser av matematikk, spesielt innen samfunnsfaglige og økonomiske 
-                områder. Målet er å utruste elevene med en solid matematisk kompetanse og evne 
+                Matematikk S er et fag som tar sikte på å gi elevene en inngående forståelse av
+                moderne anvendelser av matematikk, spesielt innen samfunnsfaglige og økonomiske
+                områder. Målet er å utruste elevene med en solid matematisk kompetanse og evne
                 til å takle komplekse problemstillinger som oppstår i disse kontekstene.
             </p>
         </div>
@@ -70,14 +70,14 @@
                 <div class="hvordan-jobber-vi">
                     <h3>Hvordan jobber vi?</h3>
                     <p>
-                        Programfaget matematikk for samfunnsfag gir fordypning i matematikk for videre 
-                        studier og arbeid innen samfunnsfag, økonomi, medisin og utdanningssektoren. 
-                        Gjennom trening av regneferdigheter, både med og uten digitale hjelpemidler, 
+                        Programfaget matematikk for samfunnsfag gir fordypning i matematikk for videre
+                        studier og arbeid innen samfunnsfag, økonomi, medisin og utdanningssektoren.
+                        Gjennom trening av regneferdigheter, både med og uten digitale hjelpemidler,
                         utvikles et grunnlag og en nødvendig kompetanse for videre arbeid med matematikk.
                     </p>
                     <p>
-                        Arbeid med programfaget skal gi en innføring i logisk og analytisk tankegang med 
-                        vekt på matematisk argumentasjon og framstillingsform, samtidig som elevene 
+                        Arbeid med programfaget skal gi en innføring i logisk og analytisk tankegang med
+                        vekt på matematisk argumentasjon og framstillingsform, samtidig som elevene
                         gjennom anvendelse får trening i sentrale metoder.
                     </p>
                 </div>
@@ -90,8 +90,8 @@
                     <h3>Hva mener elevene?</h3>
                     <p>
                         <i>
-                            «Jeg valgte S matte fordi jeg liker matematikk, men vet at jeg ikke skal bli 
-                            ingeniør. Tror jeg får mer bruk for å kunne sannsynlighetsregning og statistikk 
+                            «Jeg valgte S matte fordi jeg liker matematikk, men vet at jeg ikke skal bli
+                            ingeniør. Tror jeg får mer bruk for å kunne sannsynlighetsregning og statistikk
                             enn vektorregning i de fagene jeg tenker på å studere.»
                         </i>
                     </p>
@@ -106,7 +106,7 @@
                 </div>
                 <!-- legg til interaktivt element her -->
                 <div class="divider-element">
-                    
+
                 </div>
                 <div class="interaktivt-element"></div>
             </div>
@@ -141,14 +141,14 @@
                 <div class="hvordan-jobber-vi">
                     <h3>Hvordan jobber vi?</h3>
                     <p>
-                        Programfaget matematikk for samfunnsfag gir fordypning i matematikk for videre 
-                        studier og arbeid innen samfunnsfag, økonomi, medisin og utdanningssektoren. 
-                        Gjennom trening av regneferdigheter, både med og uten digitale hjelpemidler, 
+                        Programfaget matematikk for samfunnsfag gir fordypning i matematikk for videre
+                        studier og arbeid innen samfunnsfag, økonomi, medisin og utdanningssektoren.
+                        Gjennom trening av regneferdigheter, både med og uten digitale hjelpemidler,
                         utvikles et grunnlag og en nødvendig kompetanse for videre arbeid med matematikk.
                     </p>
                     <p>
-                        Arbeid med programfaget skal gi en innføring i logisk og analytisk tankegang med 
-                        vekt på matematisk argumentasjon og framstillingsform, samtidig som elevene 
+                        Arbeid med programfaget skal gi en innføring i logisk og analytisk tankegang med
+                        vekt på matematisk argumentasjon og framstillingsform, samtidig som elevene
                         gjennom anvendelse får trening i sentrale metoder.
                     </p>
                 </div>
@@ -160,9 +160,9 @@
                     <h3>Hva mener elevene?</h3>
                     <p>
                         <i>
-                            «S2 er det beste faget. Du lærer statistiske metoder for forskning og dataanalyse, 
-                            som du ikke lærer i R2. Dessuten lærer du mye matematisk grunnteori som kommer til 
-                            å hjelpe deg (og meg) med å forstå økonomi, forskningsmetodikk og henger samtidig 
+                            «S2 er det beste faget. Du lærer statistiske metoder for forskning og dataanalyse,
+                            som du ikke lærer i R2. Dessuten lærer du mye matematisk grunnteori som kommer til
+                            å hjelpe deg (og meg) med å forstå økonomi, forskningsmetodikk og henger samtidig
                             med på realfagsmatematikken»
                         </i>
                     </p>
@@ -176,7 +176,7 @@
                     <li><a href="https://www.udir.no/lk20/mat04-02" target="_blank">Læreplan</a></li>
                 </div>
                 <div class="divider-element">
-                    
+
                 </div>
                 <div class="interaktivt-element">
                     <iframe src="/widgets/tør_du_satse/index.html" width="510" height="430" style="border: none;"></iframe>
