--- a/programfag/tekforsk/index.html
+++ b/programfag/tekforsk/index.html
@@ -15,7 +15,7 @@
         <div id="forside-bilde">
             <h1>Teknologi & Forskningslære</h1>
             <!-- knapp tilbake til realfagssiden -->
-            <a href="/" id="tilbake-knapp">&lt; Tilbake til programfag</a>
+            <a href="/realfag/" id="tilbake-knapp">&lt; Tilbake til realfag</a>
         </div>
     </header>
     <main>
