--- a/programfag/fysikk/index.html
+++ b/programfag/fysikk/index.html
@@ -15,15 +15,15 @@
         <div id="forside-bilde">
             <h1>Fysikk</h1>
             <!-- knapp tilbake til realfagssiden -->
-            <a href="/" id="tilbake-knapp">&lt; Tilbake til programfag</a>
+            <a href="/realfag/" id="tilbake-knapp">&lt; Tilbake til realfag</a>
         </div>
     </header>
     <main>
         <!-- kort informerende tekst om programfaget -->
         <div id="intro-tekst">
             <p>
-                Fysikk på VGS gir grunnleggende innsikt i fysikkens lover. Temaene er blant annet 
-                mekanikk, energi, elektrisitet og lys. Dette er et viktig grunnlag for videre studier 
+                Fysikk på VGS gir grunnleggende innsikt i fysikkens lover. Temaene er blant annet
+                mekanikk, energi, elektrisitet og lys. Dette er et viktig grunnlag for videre studier
                 i naturvitenskapene.
             </p>
         </div>
@@ -65,20 +65,20 @@
                 <div class="hvordan-jobber-vi">
                     <h3>Hvordan jobber vi?</h3>
                     <p>
-                        For å utnytte mulighetene som er tilgjengelige for oss, er vi avhengige av at 
-                        vi forstår hvordan verden henger sammen. Det er det vi jobber mot i fysikkfaget. 
-                        Vi ser på helt dagligdagse fenomener og prøver å forklare hvorfor verden er som 
-                        den er. Hvorfor er himmelen blå? Hvorfor faller gjenstander ned når man kaster 
-                        dem opp i lufta? Hvorfor faller ikke månen ned på jorda, den er da påvirket av 
+                        For å utnytte mulighetene som er tilgjengelige for oss, er vi avhengige av at
+                        vi forstår hvordan verden henger sammen. Det er det vi jobber mot i fysikkfaget.
+                        Vi ser på helt dagligdagse fenomener og prøver å forklare hvorfor verden er som
+                        den er. Hvorfor er himmelen blå? Hvorfor faller gjenstander ned når man kaster
+                        dem opp i lufta? Hvorfor faller ikke månen ned på jorda, den er da påvirket av
                         tyngdekraft den også? Hva er egentlig elektrisk strøm?
                     </p>
                     <p>
-                        Alt dette og mye mer får du svar på ved å velge fysikk på videregående. I timene 
-                        har vi gjennomgang og jobber mye med oppgaver. Vi forsøker også å gjenskape 
-                        verden i liten skala med eksperimenter hvor vi tester ut teorien vi lærer i 
-                        timene. Merkelig nok er det slik at etter hvert som man forstår mer av hvordan 
-                        verden fungerer, så framstår den bare som enda mer mystisk, forunderlig og 
-                        fantastisk. 
+                        Alt dette og mye mer får du svar på ved å velge fysikk på videregående. I timene
+                        har vi gjennomgang og jobber mye med oppgaver. Vi forsøker også å gjenskape
+                        verden i liten skala med eksperimenter hvor vi tester ut teorien vi lærer i
+                        timene. Merkelig nok er det slik at etter hvert som man forstår mer av hvordan
+                        verden fungerer, så framstår den bare som enda mer mystisk, forunderlig og
+                        fantastisk.
                     </p>
                 </div>
                 <!-- elementer kan legges til eller fjernes -->
@@ -90,7 +90,7 @@
                     <h3>Hva mener elevene?</h3>
                     <p>
                         <i>
-                            "Du kan jo spørre noen andre, da. Ooog jeg ville ikke brukt det derre, 
+                            "Du kan jo spørre noen andre, da. Ooog jeg ville ikke brukt det derre,
                             for det er ikke et ordentlig sitat. Vi prøver å være profesjonelle, Sondre"
                         </i>
                     </p>
@@ -105,7 +105,7 @@
                 </div>
                 <!-- legg til interaktivt element her -->
                 <div class="divider-element">
-                    
+
                 </div>
                 <div class="interaktivt-element">
                     Det kule området med fete GAMES for ekte GAMERS. Og mye br for å gjøre dette elemntet større. <br><b<br>r><br><br><br><br><br><br><br><br><br><br><br><br><br><br> Br go brrrrr <br><br>
@@ -139,20 +139,20 @@
                 <div class="hvordan-jobber-vi">
                     <h3>Hvordan jobber vi?</h3>
                     <p>
-                        For å utnytte mulighetene som er tilgjengelige for oss, er vi avhengige av at 
-                        vi forstår hvordan verden henger sammen. Det er det vi jobber mot i fysikkfaget. 
-                        Vi ser på helt dagligdagse fenomener og prøver å forklare hvorfor verden er som 
-                        den er. Hvorfor er himmelen blå? Hvorfor faller gjenstander ned når man kaster 
-                        dem opp i lufta? Hvorfor faller ikke månen ned på jorda, den er da påvirket av 
+                        For å utnytte mulighetene som er tilgjengelige for oss, er vi avhengige av at
+                        vi forstår hvordan verden henger sammen. Det er det vi jobber mot i fysikkfaget.
+                        Vi ser på helt dagligdagse fenomener og prøver å forklare hvorfor verden er som
+                        den er. Hvorfor er himmelen blå? Hvorfor faller gjenstander ned når man kaster
+                        dem opp i lufta? Hvorfor faller ikke månen ned på jorda, den er da påvirket av
                         tyngdekraft den også? Hva er egentlig elektrisk strøm?
                     </p>
                     <p>
-                        Alt dette og mye mer får du svar på ved å velge fysikk på videregående. I timene 
-                        har vi gjennomgang og jobber mye med oppgaver. Vi forsøker også å gjenskape 
-                        verden i liten skala med eksperimenter hvor vi tester ut teorien vi lærer i 
-                        timene. Merkelig nok er det slik at etter hvert som man forstår mer av hvordan 
-                        verden fungerer, så framstår den bare som enda mer mystisk, forunderlig og 
-                        fantastisk. 
+                        Alt dette og mye mer får du svar på ved å velge fysikk på videregående. I timene
+                        har vi gjennomgang og jobber mye med oppgaver. Vi forsøker også å gjenskape
+                        verden i liten skala med eksperimenter hvor vi tester ut teorien vi lærer i
+                        timene. Merkelig nok er det slik at etter hvert som man forstår mer av hvordan
+                        verden fungerer, så framstår den bare som enda mer mystisk, forunderlig og
+                        fantastisk.
                     </p>
                 </div>
                 <div class="avlangt-visuelt-element">
@@ -163,7 +163,7 @@
                     <h3>Hva mener elevene?</h3>
                     <p>
                         <i>
-                            "Du kan jo spørre noen andre, da. Ooog jeg ville ikke brukt det derre, 
+                            "Du kan jo spørre noen andre, da. Ooog jeg ville ikke brukt det derre,
                             for det er ikke et ordentlig sitat. Vi prøver å være profesjonelle, Sondre"
                         </i>
                     </p>
@@ -177,7 +177,7 @@
                     <li><a href="https://www.udir.no/lk20/fys01-02" target="_blank">Læreplan</a></li>
                 </div>
                 <div class="divider-element">
-                    
+
                 </div>
                 <div class="interaktivt-element">
                     Det andre kule området med fete GAMES for ekte GAMERS. Og mye br for å gjøre dette elemntet større. <br><b<br>r><br><br><br><br><br><br><br><br><br><br><br><br><br><br> Br go brrrrr <br><br>
