Laget biologi-spill, kommenterte kjemi-spill og fikset piler og sånt
Ting er fikset

--- a/realfag/index.html
+++ b/realfag/index.html
@@ -160,8 +160,8 @@
     </main>
     <!-- Footer -->
     <div id="footer-placeholder"></div>
-    <script src="./script/footer.js"></script>
+    <script src="/script/footer.js"></script>
 
-    <script src="./script/global.js"></script>
+    <script src="/script/global.js"></script>
 </body>
 </html>
