Flyttet fagmeny-js i egen fil, ikke lenger i global

--- a/realfag/index.html
+++ b/realfag/index.html
@@ -161,7 +161,7 @@
     <!-- Footer -->
     <div id="footer-placeholder"></div>
     <script src="/script/footer.js"></script>
-
     <script src="/script/global.js"></script>
+    <script src="/script/realfagoversikt.js"></script>
 </body>
 </html>
