--- a/widgets/rakett_simulering/index.html
+++ b/widgets/rakett_simulering/index.html
@@ -12,6 +12,7 @@
     <div>
         <button id="reset-rocket">Reset</button>
         <button id="launch-rocket">Launch</button>
+        <button id="deploy-parachute">Deploy parachute</button>
         <label for="launch-angle">Launch Angle:</label>
         <input type="range" id="launch-angle" name="launch-angle" min="-90" max="90" value="20">
         <span id="angle-value">20</span>°
