--- a/programfag/informasjonsteknologi/index.html
+++ b/programfag/informasjonsteknologi/index.html
@@ -154,7 +154,7 @@
                 </div>
                 <div class="avlangt-visuelt-element">
                     <img src="../../assets/imgs/informasjonsteknologi/placeholder_IT.png" alt="TODO">
-                    <img src="../../assets/imgs/informasjonsteknologi/placeholder_IT.png" alt="TODO">
+                    <img src="../../assets/imgs/informasjonsteknologi/sofagruppa.jpg" alt="TODO">
                 </div>
                 <div class="elev-sitat">
                     <h3>Hva mener elevene?</h3>
