--- a/programfag/kjemi/index.html
+++ b/programfag/kjemi/index.html
@@ -90,7 +90,7 @@
                 </div>
                 <!-- elementer kan legges til eller fjernes -->
                 <div class="avlangt-visuelt-element">
-                    <img src="../../assets/imgs/kjemi/atomikon.png" alt="Person som driver med kjemi">
+                    <img src="../../assets/imgs/kjemi/dude_med_dråpeteller.jpg" alt="Person som driver med kjemi">
                     <img src="../../assets/imgs/kjemi/periodesystem_brikker.png" alt="Person som driver med kjemi">
                 </div>
                 <div class="elev-sitat">
@@ -175,7 +175,7 @@
                     </p>
                 </div>
                 <div class="avlangt-visuelt-element">
-                    <img src="../../assets/imgs/kjemi/blå_kjemigreie.png" alt="Person som driver med kjemi">
+                    <img src="../../assets/imgs/kjemi/kjemiting.jpg" alt="Person som driver med kjemi">
                     <img src="../../assets/imgs/kjemi/atomikon_rød.png" alt="Person som driver med kjemi">
                 </div>
                 <div class="elev-sitat">
