La til programområde-oversikt
Ny seksjon under forside-delen med mulighet for å bytte programområde

--- a/realfag/index.html
+++ b/realfag/index.html
@@ -19,6 +19,14 @@
         </div>
     </header>
     <main>
+        <div id="programområder">
+            <div>Programområder: </div>
+            <a href="/realfag/index.html">Realfag</a>
+            <a href="#">SSØ</a>
+            <a href="#">MK</a>
+            <a href="#">KDA</a>
+            <a href="#">Idrettsfag</a>
+        </div>
         <!-- informerende tekst som introduserer "programfagstypen" -->
         <div id="intro-område">
             <p id="intro">Velkommen til Elvebakken realfag! Her kan du utforske de ulike programfagene vi tilbyr, og finne ut mer om hva som interesserer deg. Klikk på et programfag for å lese mer. Eller klikk på "Vis alle" for å se en oversikt over alle programfagene. Og enda bedre, kom på besøk til oss på Elvebakken og se hvordan det er å være elev hos oss! Dette er placeholder tekst, og vil bli erstattet med noe mer fornuftig senere.</p>
