Fikset flere bilder
Bilder på kjemi- og biologi-siden endret

--- a/realfag/index.html
+++ b/realfag/index.html
@@ -107,7 +107,7 @@
                     <p class="fag-sitat">"Kjemien har et eget språk, med egne symboler og notasjoner, som brukes for å beskrive sammenhenger og reaksjoner." - Snl.no</p>
                     <a class ="fag-se-mer-knapp" href="/programfag/kjemi/">Se mer →</a>
                 </div>
-                <img src="/assets/imgs/kjemi/labbilde.png" class="fag-bilde">
+                <img src="/assets/imgs/kjemi/kjemiting.jpg" class="fag-bilde">
             </div>
             <div class="fag-element">
                 <img src="/assets/imgs/biologi/dna_grønn.png" class="fag-bilde">
