La til mattesidene i SSØ. Nå e det 16 fag!!! yey (ironisk)

--- a/ssø/index.html
+++ b/ssø/index.html
@@ -112,6 +112,16 @@
                     <p>Markedsføring</p>
                     <img src="/assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
+                <a href="/programfag/r_matte/" class="fag_i_meny">
+                    <img src="/assets/imgs/matte_r/matte_r_placeholder.png" alt="test bilde" class="fagmeny_bilde">
+                    <p>Matematikk-R</p>
+                    <img src="/assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
+                </a>
+                <a href="/programfag/s_matte/" class="fag_i_meny">
+                    <img src="/assets/imgs/matte_s/matte_s_placeholder.png" alt="test bilde" class="fagmeny_bilde">
+                    <p>Matematikk-S</p>
+                    <img src="/assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
+                </a>
                 <button id="venstre_bla_knapp" class="bla_knapp" onclick="flyttMeny('venstre')"></button>
                 <button id="høyre_bla_knapp" class="bla_knapp" onclick="flyttMeny('høyre')"></button>
             </div>
