--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style/global.css">
     <link rel="stylesheet" href="style/forside.css">
     <link rel="icon" href="/assets/icons/favicon.png" type="image/png">
-    <title>Elvebakken Realfag</title>
+    <title>Elvebakken Programfag</title>
 </head>
 <body>
     <header>
