--- a/widgets/rakett_simulering/index.html
+++ b/widgets/rakett_simulering/index.html
@@ -25,6 +25,11 @@
     </div>
     <div id="advanced-settings">
         <div>
+            <label for="zoom">Zoom:</label>
+            <input type="range" id="zoom" name="zoom" min="0.1" max="5" step="0.1" value="0.7">
+            <span id="zoom-value">0.7</span>
+        </div>
+        <div>
             <label for="nose-color">Nose Color:</label>
             <input type="color" id="nose-color" name="nose-color" value="#ff0000">
             <label for="fins-color">Fins Color:</label>
