Fikset localStorage ting slik at når man går inn på mattefagene, kan man gå tilbake til siden man kom ifra

--- a/programfag/r_matte/index.html
+++ b/programfag/r_matte/index.html
@@ -224,5 +224,6 @@
     <div id="footer-placeholder"></div>
     <script src="/script/footer.js"></script>
     <script src="/script/global.js"></script>
+    <script src="/script/matte.js"></script>
 </body>
 </html>
