--- a/realfag/index.html
+++ b/realfag/index.html
@@ -72,12 +72,12 @@
                     <p>Geofag</p>
                     <img src="/assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
-                <a href="/programfag/r_matte/" class="fag_i_meny">
+                <a href="/programfag/r_matte/" class="fag_i_meny" class="matte-fag">
                     <img src="/assets/imgs/matte_r/matte_r_placeholder.png" alt="test bilde" class="fagmeny_bilde">
                     <p>Matematikk-R</p>
                     <img src="/assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
-                <a href="/programfag/s_matte/" class="fag_i_meny">
+                <a href="/programfag/s_matte/" class="fag_i_meny" class="matte-fag">
                     <img src="/assets/imgs/matte_s/matte_s_placeholder.png" alt="test bilde" class="fagmeny_bilde">
                     <p>Matematikk-S</p>
                     <img src="/assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
