Fungerende minus psykologiside

--- a/ssø/index.html
+++ b/ssø/index.html
@@ -82,8 +82,8 @@
                     <p>Språk 3</p>
                     <img src="/assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
-                <a href="/programfag/entreprenørskap/" class="fag_i_meny">
-                    <img src="/assets/imgs/fysikk/placeholder_fysikk.png" alt="test bilde" class="fagmeny_bilde">
+                <a href="/programfag/psykologi/" class="fag_i_meny">
+                    <img src="/assets/imgs/psykologi/placeholder_psykologi.jpg" alt="bilde psykologi" class="fagmeny_bilde">
                     <p>Psykologi</p>
                     <img src="/assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
