Litt mer utfyllende "hvordan jobber vi?" med eksempler på psykologiske spørsmål

--- a/programfag/psykologi/index.html
+++ b/programfag/psykologi/index.html
@@ -76,6 +76,9 @@
                         dokumentarer, filmer og serier, prosjekter og
                         caseoppgaver.
                     </p>
+                    <p>
+                        Eksempler på psykologiske spørsmål som blir diskutert er: "Hva er ondskap?", "Er intelligens arvelig?", "Hva er personlighet?" og "Hvordan fungerer hjernen vår?".
+                    </p>
                 </div>
                 <!-- elementer kan legges til eller fjernes -->
                 <div class="avlangt-visuelt-element">
@@ -142,6 +145,9 @@
                         dokumentarer, filmer og serier, prosjekter og
                         caseoppgaver.
                     </p>
+                    <p>
+                        Eksempler på psykologiske spørsmål som blir diskutert er: "Hva er ondskap?", "Er intelligens arvelig?", "Hva er personlighet?" og "Hvordan fungerer hjernen vår?".
+                    </p>
                 </div>
                 <div class="avlangt-visuelt-element">
                     <img src="../../assets/imgs/psykologi/placeholder_psykologi.jpg" alt="Placeholder">
@@ -170,8 +176,6 @@
                 </div>
             </div>
         </div>
-        <!-- bølgete linje -->
-        <div class="skillelinje" id="bølge"></div>
     </main>
     <!-- Footer -->
     <div id="footer-placeholder"></div>
