Rettslære med to bilder og en annen fargepalett av en person som ikke kan dette
Jeg klarer virkelig ikke farger av en eller annen grunn

--- a/ssø/index.html
+++ b/ssø/index.html
@@ -87,8 +87,8 @@
                     <p>Psykologi</p>
                     <img src="/assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
-                <a href="/programfag/entreprenørskap/" class="fag_i_meny">
-                    <img src="/assets/imgs/fysikk/placeholder_fysikk.png" alt="test bilde" class="fagmeny_bilde">
+                <a href="/programfag/rettslære/" class="fag_i_meny">
+                    <img src="/assets/imgs/rettslære/placeholder_rettslære.jpg" alt="test bilde" class="fagmeny_bilde">
                     <p>Rettslære</p>
                     <img src="/assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
