--- a/ssø/index.html
+++ b/ssø/index.html
@@ -92,8 +92,8 @@
                     <p>Rettslære</p>
                     <img src="/assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
-                <a href="/programfag/entreprenørskap/" class="fag_i_meny">
-                    <img src="/assets/imgs/fysikk/placeholder_fysikk.png" alt="test bilde" class="fagmeny_bilde">
+                <a href="/programfag/samfunnsgeografi/" class="fag_i_meny">
+                    <img src="/assets/imgs/samfunnsgeografi/placeholder_samfunnsgeografi.jpg" alt="test bilde" class="fagmeny_bilde">
                     <p>Samfunnsgeografi</p>
                     <img src="/assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
