Fungerende samfunnsøkonomi med kun ett bilde

--- a/ssø/index.html
+++ b/ssø/index.html
@@ -97,8 +97,8 @@
                     <p>Samfunnsgeografi</p>
                     <img src="/assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
-                <a href="/programfag/entreprenørskap/" class="fag_i_meny">
-                    <img src="/assets/imgs/fysikk/placeholder_fysikk.png" alt="test bilde" class="fagmeny_bilde">
+                <a href="/programfag/samfunnsøkonomi/" class="fag_i_meny">
+                    <img src="/assets/imgs/samfunnsøkonomi/placeholder_samfunnsøkonomi.webp" alt="test bilde" class="fagmeny_bilde">
                     <p>Samfunnsøkonomi</p>
                     <img src="/assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
